# sneaker_database

./: .gitignore  Cargo.toml  Makefile  README.md  shoes.db
sneaker_webserver/: Makefile  db.sqlite3  manage.py  pyproject.toml
sneaker_webserver/django_sneaker/: asgi.py  settings.py  urls.py  wsgi.py
sneaker_webserver/sneaker_api/: apps.py  models.py  serializers.py  urls.py  views.py
sneaker_webserver/sneaker_api/migrations/: 0001_initial.py  0002_alter_shoe_table.py  0003_shoe_link.py  0004_alter_shoe_table.py
sneaker_webserver/sneaker_gif_creator/: create_gif.py  get_imgs.py
sneaker_webserver/sneaker_info_getter/: create_gif.py  get_imgs.py  get_prices.py
sneaker_webserver/sneaker_webserver/: asgi.py  settings.py  wsgi.py
sneaker_webserver/sneaker_website/src/: ShoeList.js  ShoeOverlay.js
sneaker_webserver/tests/: test_sneaker_webserver.py
sneaker_website/: Makefile  package-lock.json  package.json
sneaker_website/src/: App.js  ShoeList.css  ShoeList.js  ShoeOverlay.css
src/: main.rs  scrape.rs
