[package]
name = "sneaker_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

http = "0.2.9"
reqwest = {version = "0.11", features = ["blocking","json"]}
scraper = "0.17.0"
tokio = { version = "1", features = ["full"] }
rusqlite = {version = "0.29.0", features = ["bundled"]}
serde_json = "1.0.103"